bpo-35384: The repr of ctypes.CArgObject no longer fail for non-ascii character.